Changed project transparency

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinle@cs.cmu.edu"><i class="ion-android-mail"></i></a></li>
 						</ul>
-						<a class="btn btn-border-purple" href="imgs/resume.pdf">Résumé</a><br><br>
+						<a class="btn btn-border-purple" href="imgs/resume.pdf">Resume</a><br><br>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -190,6 +190,9 @@
 		</div><!-- container -->
 
 	</section><!-- experience-section -->
+
+
+
 
 
 	<footer>
