--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<br>
 
-		<section class="experience-section section proj">
+		<section class="section proj">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-4">
