--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		  				<p>Hi, I'm Austin, an aspiring software engineer studying Information
 		            Systems and Computer Science at Carnegie Mellon University. I'm
 								currently doing research building data crawling mechanisms and
-								machine learning models at CMU's MultiComp Lab.</p>
+								multimodal machine learning models at CMU's MultiComp Lab.</p>
 		  			</div><br>
 						<ul class="social-icons">
 							<li class="git" ><a href="https://github.com/austin-leung"><i class="ion-social-github"></i></a></li>
