--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinle@cs.cmu.edu"><i class="ion-android-mail"></i></a></li>
 						</ul>
-						<a class="btn btn-border-purple" href="imgs/resume.pdf">Resume</a><br><br>
+						<a class="btn btn-border-purple" href="imgs/AustinLeungResume.pdf">Resume</a><br><br>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -155,11 +155,12 @@
 						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
 						<br>
 						<ul class="list margin-b-30">
-							<li>Build data crawling mechanisms with web and python-based libraries retrieving data from APIs</li>
-							<li>Build machine learning models on gathered data to extract computational descriptors</li>
+							<li>Run data crawling mechanisms with web and python-based libraries retrieving data from APIs</li>
+							<li>•	Build deep neural networks with PyTorch to extract computational descriptors</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">Python</span>
+									 <span class="skill">PyTorch</span>
 						 </div>
 					</div><!-- experience -->
 
