--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						<br>
 						<ul class="list margin-b-30">
 							<li>Run data crawling mechanisms with web and python-based libraries retrieving data from APIs</li>
-							<li>•	Build deep neural networks with PyTorch to extract computational descriptors</li>
+							<li>Build deep neural networks with PyTorch to extract computational descriptors</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">Python</span>
