Updated projects & resume

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinle@cs.cmu.edu"><i class="ion-android-mail"></i></a></li>
 						</ul>
-						<a class="btn btn-border-purple" href="imgs/AustinLeungResume.pdf">Resume</a><br><br>
+						<a class="btn btn-border-purple" href="imgs/Austin Leung Resume.pdf">Resume</a><br><br>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -112,6 +112,30 @@
 						</div>
 				</div>
 
+			</div> <!-- close row -->
+
+			<br>
+
+			<div class="row justify-content-md-center">
+
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+						<div class="hovereffect">
+								<img class="img-responsive" src="imgs/abomasnow.png" alt="">
+								<div class="overlay">
+									 <h2>Who's That Pokémon?</h2>
+									 <a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/whosThatPokemon.ipynb">
+										 <div class="infoText">
+										 A deep learning neural network trained to recognize
+										 images of Pokémon.
+										 <div class="skills">
+														<span class="skill">Python</span>
+														<span class="skill">PyTorch</span>
+											</div></div>
+										</a>
+								</div>
+						</div>
+				</div>
+
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 						<div class="hovereffect">
 								<img class="img-responsive" src="imgs/findthesets.png" alt="">
@@ -130,6 +154,7 @@
 								</div>
 						</div>
 				</div>
+
 			</div> <!-- close row -->
 
 	</section>
