--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 		  				<p>Hi, I'm Austin, an aspiring software engineer studying Information
 		            Systems and Computer Science at Carnegie Mellon University. I'm
 								currently doing research building data crawling mechanisms and
-								multimodal machine learning models at CMU's MultiComp Lab.</p>
+								multimodal machine learning neural networks at CMU's MultiComp Lab.
+								I'm also helping Adagio innovate the digital guitar learning experience.
+							</p>
 		  			</div><br>
 						<ul class="social-icons">
 							<li class="git" ><a href="https://github.com/austin-leung"><i class="ion-social-github"></i></a></li>
@@ -123,10 +125,9 @@
 								<img class="img-responsive" src="imgs/abomasnow.png" alt="">
 								<div class="overlay">
 									 <h2>Who's That Pokémon?</h2>
-									 <a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/whosThatPokemon.ipynb">
+									 <a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonMLP.ipynb">
 										 <div class="infoText">
-										 A deep learning neural network trained to recognize
-										 images of Pokémon.
+										 PyTorch MLP and CNN neural networks trained to identify Pokémon.
 										 <div class="skills">
 														<span class="skill">Python</span>
 														<span class="skill">PyTorch</span>
@@ -180,8 +181,11 @@
 						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
 						<br>
 						<ul class="list margin-b-30">
-							<li>Run data crawling mechanisms with web and python-based libraries retrieving data from APIs</li>
-							<li>Build deep neural networks with PyTorch to extract computational descriptors</li>
+							<li>Run data crawling mechanisms with web and python-based
+								libraries retrieving data from APIs</li>
+							<li>Build multilayer perceptron and convolutional neural
+								networks with PyTorch to extract computational descriptors
+								and detect multimodal patterns</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">Python</span>
@@ -195,9 +199,12 @@
 						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
 						<br>
 						<ul class="list margin-b-30">
-							<li>Design and develop a user-friendly website to communicate
-								benefits of the company's digital guitar learning experience to
-								potential customers and investors</li>
+							<li>Lead initial design and development of Adagio’s website and
+								features to reach minimum viable product for customers and
+								investors</li>
+							<li>Analyze competition and guitar market to help determine
+									essential qualities of Adagio’s digital guitar learning
+									experience and prioritize website features </li>
 							<li>Create a progress tracker for guitar learning based on
 								successful elements of other gamified e-learning services</li>
 						</ul>
