--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									 <h2>Who's That Pokémon?</h2>
 									 <a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonMLP.ipynb">
 										 <div class="infoText">
-										 PyTorch multilayer perceptrons and convolutional
+										 Training a multilayer perceptron and convolutional
 										 neural networks trained to identify Pokémon.
 										 <div class="skills">
 														<span class="skill">Python</span>
