--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 									 <h2>Who's That Pokémon?</h2>
 									 <a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonMLP.ipynb">
 										 <div class="infoText">
-										 Training a multilayer perceptron and convolutional
-										 neural networks trained to identify Pokémon.
+										 A multilayer perceptron and convolutional
+										 neural network trained to identify over 900 Pokémon.
 										 <div class="skills">
 														<span class="skill">Python</span>
 														<span class="skill">PyTorch</span>
