--- a/index.html
+++ b/index.html
@@ -175,6 +175,28 @@
 				<div class="col-sm-8">
 
 					<div class="experience margin-b-50">
+						<h4><b>TEACHING ASSISTANT</b></h4>
+						<h5 class="font-yellow">
+							<b>15-122 Principles of Imperative Computation</b><br>
+							<b>Carnegie Mellon University School of Computer Science</b>
+						</h5>
+						<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
+						<ul class="list margin-b-30">
+							<li>Teach topics focusing on fundamental computer science
+								concepts such as abstraction, correctness, complexity,
+								modularity, and memory management through use of complex
+								data structures and algorithms</li>
+							<li>Lead weekly recitations, supervise labs, and hold office
+								hours while coordinating with professors on curriculum</li>
+						</ul>
+						<div class="skills">
+									 <span class="skill">C</span>
+						 </div>
+					</div><!-- experience -->
+
+					<br>
+
+					<div class="experience margin-b-50">
 						<h4><b>DATA RESEARCH ASSISTANT</b></h4>
 						<h5 class="font-yellow">
 							<b>MultiComp Lab - Carnegie Mellon University School of Computer Science</b>
@@ -214,8 +236,7 @@
 									 <span class="skill">CSS</span>
 									 <span class="skill">Javascript</span>
 									 <span class="skill">React</span>
-									 <span class="skill">Node.js</span>
-									 <span class="skill">Express.js</span>
+									 <span class="skill">PHP</span>
 						 </div>
 					</div><!-- experience -->
 
