--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
 							<p>Hi, I'm Austin, an aspiring software engineer studying Information
 								Systems and Computer Science at Carnegie Mellon University. I'm
-								currently doing research building data crawling mechanisms and
-								multimodal machine learning neural networks at CMU's MultiComp Lab.
+								currently exploring data crawling mechanisms and
+								multimodal deep learning neural networks at CMU's MultiComp Lab.
 								I'm also helping Adagio innovate the digital guitar learning experience.
 							</p>
 						</div><br>
@@ -182,10 +182,7 @@
 						</h5>
 						<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
 						<ul class="list margin-b-30">
-							<li>Teach topics focusing on fundamental computer science
-								concepts such as abstraction, correctness, complexity,
-								modularity, and memory management through use of complex
-								data structures and algorithms</li>
+							<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
 							<li>Lead weekly recitations, supervise labs, and hold office
 								hours while coordinating with professors on curriculum</li>
 						</ul>
@@ -197,17 +194,14 @@
 					<br>
 
 					<div class="experience margin-b-50">
-						<h4><b>DATA RESEARCH ASSISTANT</b></h4>
+						<h4><b>DATA & MACHINE LEARNING RESEARCH ASSISTANT</b></h4>
 						<h5 class="font-yellow">
 							<b>MultiComp Lab - Carnegie Mellon University School of Computer Science</b>
 						</h5>
 						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
 						<ul class="list margin-b-30">
-							<li>Run data crawling mechanisms with web and python-based
-								libraries retrieving data from APIs</li>
-							<li>Build multilayer perceptron and convolutional neural
-								networks with PyTorch to extract computational descriptors
-								and detect multimodal patterns</li>
+							<li>Explore web data crawling mechanisms to compile and release multimodal datasets</li>
+							<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">Python</span>
@@ -227,7 +221,7 @@
 								investors</li>
 							<li>Analyze competition and guitar market to help determine
 									essential qualities of Adagio’s digital guitar learning
-									experience and prioritize website features </li>
+									experience and prioritize website features</li>
 							<li>Create a progress tracker for guitar learning based on
 								successful elements of other gamified e-learning services</li>
 						</ul>
@@ -235,8 +229,6 @@
 									 <span class="skill">HTML</span>
 									 <span class="skill">CSS</span>
 									 <span class="skill">Javascript</span>
-									 <span class="skill">React</span>
-									 <span class="skill">PHP</span>
 						 </div>
 					</div><!-- experience -->
 
