--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
 							<p>Hi, I'm Austin, an aspiring software engineer studying Information
 								Systems and Computer Science at Carnegie Mellon University. I'm
-								currently exploring data crawling mechanisms and
-								multimodal deep learning neural networks at CMU's MultiComp Lab.
-								I'm also helping Adagio innovate the digital guitar learning experience.
+								currently teaching imperative programming, exploring multimodal AI with
+								deep learning neural networks, and helping Adagio innovate
+								the digital guitar learning experience.
 							</p>
 						</div><br>
 						<ul class="social-icons">
