new Resume format

--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 						<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
 						<ul class="list margin-b-30">
 							<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
-							<li>Lead weekly recitations, supervise labs, and hold office
-								hours while coordinating with professors on curriculum</li>
+							<li>Lead weekly labs, participate in grading sessions, and hold office hours for over 500 students</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">C</span>
@@ -222,8 +221,6 @@
 							<li>Analyze competition and guitar market to help determine
 									essential qualities of Adagio’s digital guitar learning
 									experience and prioritize website features</li>
-							<li>Create a progress tracker for guitar learning based on
-								successful elements of other gamified e-learning services</li>
 						</ul>
 						<div class="skills">
 									 <span class="skill">HTML</span>
