--- a/index.html
+++ b/index.html
@@ -114,25 +114,49 @@
 					</div>
 				</div>
 
-			</div> <!-- close row -->
-
-			<br>
-
-			<div class="row justify-content-md-center">
-
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 					<div class="hovereffect">
-						<img class="img-responsive" src="imgs/abomasnow.png" alt="">
+						<img class="img-responsive" src="imgs/stork.png" alt="stork">
 						<div class="overlay">
-							<h2>Who's That Pokémon?</h2>
-							<a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonCNN.ipynb">
+							<h2>Stork</h2>
+							<a class="info stork" href="https://github.com/DLo930/Stork">
 								<div class="infoText">
-									A multilayer perceptron and convolutional
-									neural network trained to identify over 900 Pokémon.
+									A platform that connects people in need of supplies during disasters 
+									with those who can help out. 
 									<div class="skills">
+										<span class="skill">React</span>
+										<span class="skill">Firestore</span>
 										<span class="skill">Python</span>
-										<span class="skill">PyTorch</span>
-									</div></div>
+										<span class="skill">Flask</span>
+										<span class="skill">WebSocket</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+
+
+				</div> <!-- close row -->
+
+				<br>
+
+				<div class="row justify-content-md-center">
+
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+						<div class="hovereffect">
+							<img class="img-responsive" src="imgs/abomasnow.png" alt="">
+							<div class="overlay">
+								<h2>Who's That Pokémon?</h2>
+								<a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonCNN.ipynb">
+									<div class="infoText">
+										A multilayer perceptron and convolutional
+										neural network trained to identify over 900 Pokémon.
+										<div class="skills">
+											<span class="skill">Python</span>
+											<span class="skill">PyTorch</span>
+										</div>
+									</div>
 								</a>
 							</div>
 						</div>
