--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
 						<div class="profile-img"><img src="imgs/profile.png" alt="Profile Pic"></div>
 						<div id="banner-text">
 							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
-							<p>Hi, I'm Austin, an aspiring software engineer studying Information
-								Systems and Computer Science at Carnegie Mellon University. I'm
-								currently teaching imperative programming, exploring multimodal AI with
-								deep learning neural networks, and helping Adagio innovate
-								the digital guitar learning experience.
+							<p>Hi, I'm Austin, a junior at CMU studying Information Systems with minors in Computer Science and Software Engineering. <br><br>I'm currently building platforms for developing tech skills with Pluralsight!
 							</p>
 						</div><br>
 						<ul class="social-icons">
@@ -72,41 +68,40 @@
 
 		<div class="row justify-content-md-center">
 
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-				<div class="hovereffect">
-					<img class="img-responsive" src="imgs/reddit.png" alt="">
-					<div class="overlay">
-						<h2>The Reddit Sentiment Analyzer</h2>
-						<a class="info reddit" href="https://github.com/DLo930/reddit-sentiment-analysis">
-							<div class="infoText">
-								A chrome extension and web app allowing you to view
-								Reddit posts and comments colored by emotion.<br><br>
-								<i>1st Place - CodeDay Pittsburgh Spring 2019</i>
-								<div class="skills">
-									<span class="skill">HTML</span>
-									<span class="skill">CSS</span>
-									<span class="skill">Javascript</span>
-									<span class="skill">React</span>
-									<span class="skill">Node.js</span>
-									<span class="skill">Express.js</span>
-								</div></div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					<div class="hovereffect">
+					<img class="img-responsive" src="imgs/textlive.png" alt="textlive">
+						<div class="overlay">
+							<h2>TextLive</h2>
+							<a class="info textlive" href="https://play.google.com/store/apps/details?id=com.textlive">
+								<div class="infoText">
+									An Android app that allows you to call people and have a continuous text conversation.
+									<div class="skills">
+										<span class="skill">HTML/CSS/JS</span>
+										<span class="skill">React Native</span>
+										<span class="skill">Node.js</span>
+										<span class="skill">Express.js</span>
+										<span class="skill">MongoDB</span>
+									</div>
+								</div>
 							</a>
 						</div>
 					</div>
-				</div>
+				</div>	
 
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 					<div class="hovereffect">
-						<img class="img-responsive" src="imgs/mahjong.png" alt="mahjong">
+					<img class="img-responsive" src="imgs/creamery.png" alt="textlive">
 						<div class="overlay">
-							<h2>AI Mahjong</h2>
-							<a class="info mahjong" href="https://github.com/austin-leung/112-Mahjong">
+							<h2>A&M Creamery</h2>
+							<a class="info creamery" href="https://a-and-m-creamery.herokuapp.com/">
 								<div class="infoText">
-									A multiplayer game with a strong AI and assist mode to
-									train player strategy.
+									A system for managing employees, shifts, and payroll for ice cream shops. Comes with
+									different views for admins, managers, and employees along with a full testing suite.
 									<div class="skills">
-										<span class="skill">Python</span>
-										<span class="skill">Tkinter</span>
+										<span class="skill">HTML/CSS/JS</span>
+										<span class="skill">Ruby on Rails</span>
+										<span class="skill">PostgreSQL</span>
 									</div>
 								</div>
 							</a>
@@ -116,25 +111,24 @@
 
 				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 					<div class="hovereffect">
-						<img class="img-responsive" src="imgs/stork.png" alt="stork">
+						<img class="img-responsive" src="imgs/reddit.png" alt="Reddit">
 						<div class="overlay">
-							<h2>Stork</h2>
-							<a class="info stork" href="https://github.com/DLo930/Stork">
+							<h2>The Reddit Sentiment Analyzer</h2>
+							<a class="info reddit" href="https://github.com/DLo930/reddit-sentiment-analysis">
 								<div class="infoText">
-									A platform that connects people in need of supplies during disasters 
-									with those who can help out. 
+									A chrome extension and web app allowing you to view Reddit posts and comments colored by emotion.<br/><br/>
+									<i>1st Place - CodeDay Pittsburgh Spring 2019</i>
 									<div class="skills">
+										<span class="skill">HTML/CSS/JS</span>
 										<span class="skill">React</span>
-										<span class="skill">Firestore</span>
-										<span class="skill">Python</span>
-										<span class="skill">Flask</span>
-										<span class="skill">WebSocket</span>
+										<span class="skill">Node.js</span>
+										<span class="skill">Express.js</span>
 									</div>
 								</div>
 							</a>
 						</div>
 					</div>
-				</div>
+				</div>	
 
 
 				</div> <!-- close row -->
@@ -145,7 +139,49 @@
 
 					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 						<div class="hovereffect">
-							<img class="img-responsive" src="imgs/abomasnow.png" alt="">
+							<img class="img-responsive" src="imgs/mahjong.png" alt="mahjong">
+							<div class="overlay">
+								<h2>AI Mahjong</h2>
+								<a class="info mahjong" href="https://github.com/austin-leung/112-Mahjong">
+									<div class="infoText">
+										A multiplayer game with a strong AI and assist mode to
+										train player strategy.
+										<div class="skills">
+											<span class="skill">Python</span>
+											<span class="skill">Tkinter</span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+						<div class="hovereffect">
+							<img class="img-responsive" src="imgs/stork.png" alt="stork">
+							<div class="overlay">
+								<h2>Stork</h2>
+								<a class="info stork" href="https://github.com/DLo930/Stork">
+									<div class="infoText">
+										A platform that connects people in need of supplies during disasters 
+										with those who can help out. 
+										<div class="skills">
+											<span class="skill">HTML/CSS/JS</span>
+											<span class="skill">React</span>
+											<span class="skill">Firestore</span>
+											<span class="skill">Python</span>
+											<span class="skill">Flask</span>
+											<span class="skill">WebSocket</span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+						<div class="hovereffect">
+							<img class="img-responsive" src="imgs/abomasnow.png" alt="pokemon">
 							<div class="overlay">
 								<h2>Who's That Pokémon?</h2>
 								<a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonCNN.ipynb">
@@ -161,6 +197,12 @@
 							</div>
 						</div>
 					</div>
+
+				</div> <!-- close row -->
+
+				<br>
+
+				<div class="row justify-content-md-center">
 
 					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 						<div class="hovereffect">
@@ -181,7 +223,7 @@
 						</div>
 					</div>
 
-				</div> <!-- close row -->
+				</div>
 
 			</section>
 
@@ -191,65 +233,96 @@
 	<section class="experience-section section exp">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="heading">
 						<h3><b>Experience</b></h3>
 					</div>
 				</div><!-- col-sm-4 -->
-				<div class="col-sm-8">
+				<div class="col-sm-9">
 
-					<div class="experience margin-b-50">
-						<h4><b>TEACHING ASSISTANT</b></h4>
-						<h5 class="font-yellow">
-							<b>15-122 Principles of Imperative Computation</b><br>
-							<b>Carnegie Mellon University School of Computer Science</b>
-						</h5>
-						<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
-						<ul class="list margin-b-30">
-							<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
-							<li>Lead weekly labs, participate in grading sessions, and hold office hours for over 500 students</li>
-						</ul>
-						<div class="skills">
-									 <span class="skill">C</span>
-						 </div>
+					<div class="experience margin-b-50 row">
+						<div class="col-sm-2 company">
+							<img src="imgs/ps.png"/>
+						</div>
+						<div class="col-sm-10">
+							<h4><b>INCOMING SOFTWARE ENGINEER INTERN</b></h4>
+							<h5 class="font-yellow">
+								<b>Pluralsight</b>
+							</h5>
+							<h6 class="margin-t-10">MAY 2020 - PRESENT</h6>
+							<ul class="list margin-b-30">
+								<li>Building platforms for developing tech skills</li><br>
+							</ul>
+							<div class="skills">
+								<!-- <span class="skill">C</span> -->
+							</div>
+						</div>
+					</div><!-- experience -->
+
+					<div class="experience margin-b-50 row">
+						<div class="col-sm-2 company">
+							<img src="imgs/scs.gif"/>
+						</div>
+						<div class="col-sm-10">
+							<h4><b>TEACHING ASSISTANT</b></h4>
+							<h5 class="font-yellow">
+								<b>15-122 Principles of Imperative Computation - CMU School of Computer Science</b>
+							</h5>
+							<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
+							<ul class="list margin-b-30">
+								<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
+								<li>Lead weekly labs & recitations, participate in grading sessions, and hold office hours for over 500 students</li>
+							</ul>
+							<div class="skills">
+								<span class="skill">C</span>
+							</div>
+						</div>
 					</div><!-- experience -->
 
 					<br>
 
-					<div class="experience margin-b-50">
-						<h4><b>DATA & MACHINE LEARNING RESEARCH ASSISTANT</b></h4>
-						<h5 class="font-yellow">
-							<b>MultiComp Lab - Carnegie Mellon University School of Computer Science</b>
-						</h5>
-						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
-						<ul class="list margin-b-30">
-							<li>Explore web data crawling mechanisms to compile and release multimodal datasets</li>
-							<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
-						</ul>
-						<div class="skills">
-									 <span class="skill">Python</span>
-									 <span class="skill">PyTorch</span>
-						 </div>
+					<div class="experience margin-b-50 row">
+						<div class="col-sm-2 company">
+							<img src="imgs/lti.png"/>
+						</div>
+						<div class="col-sm-10">
+							<h4><b>DATA & MACHINE LEARNING RESEARCH ASSISTANT</b></h4>
+							<h5 class="font-yellow">
+								<b>MultiComp Lab - CMU School of Computer Science</b>
+							</h5>
+							<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
+							<ul class="list margin-b-30">
+								<li>Explore web data crawling mechanisms to compile and release multimodal datasets</li>
+								<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
+							</ul>
+							<div class="skills">
+										<span class="skill">Python</span>
+										<span class="skill">PyTorch</span>
+							</div>
+						</div>
 					</div><!-- experience -->
 
 					<br>
 
-					<div class="experience margin-b-50">
-						<h4><b>TECHNOLOGY INTERN</b></h4>
-						<h5 class="font-yellow"><b>Adagio Digital Guitar School</b></h5>
-						<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
-						<ul class="list margin-b-30">
-							<li>Lead initial design and development of Adagio’s website and
-								features to reach minimum viable product for customers and
-								investors</li>
-							<li>Analyze competition and guitar market to help determine
-									essential qualities of Adagio’s digital guitar learning
-									experience and prioritize website features</li>
-						</ul>
-						<div class="skills">
-									 <span class="skill">HTML</span>
-									 <span class="skill">CSS</span>
-									 <span class="skill">Javascript</span>
+					<div class="experience margin-b-50 row">
+						<div class="col-sm-2 company">
+							<img src="imgs/adagio.png"/>
+						</div>
+						<div class="col-sm-10">
+							<h4><b>TECHNOLOGY INTERN</b></h4>
+							<h5 class="font-yellow"><b>Adagio Digital Guitar School</b></h5>
+							<h6 class="margin-t-10">MAY 2019 - Oct 2019</h6>
+							<ul class="list margin-b-30">
+								<li>Lead initial design and development of Adagio’s website and
+									features to reach minimum viable product for customers and
+									investors</li>
+								<li>Analyze competition and guitar market to help determine
+										essential qualities of Adagio’s digital guitar learning
+										experience and prioritize website features</li>
+							</ul>
+							<div class="skills">
+								<span class="skill">HTML/CSS/JS</span>
+							</div>
 						 </div>
 					</div><!-- experience -->
 
