--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
 
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company">
-							<img src="imgs/adagio.png"/>
-						</div>
+							<img src="imgs/adagio.png" alt="Adagio"/>
+						</div> 
 						<div class="col-sm-10">
 							<h4><b>TECHNOLOGY INTERN</b></h4>
 							<h5 class="font-yellow"><b>Adagio Digital Guitar School</b></h5>
