--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company">
-							<img src="imgs/adagio.png" alt="Adagio"/>
+							<img src="imgs/adagio2.png" alt="Adagio"/>
 						</div> 
 						<div class="col-sm-10">
 							<h4><b>TECHNOLOGY INTERN</b></h4>
