--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<br>
 
-	<section class="section proj">
+	<section class="section proj exp">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
@@ -228,7 +228,7 @@
 			</section>
 
 
-
+	<hr />
 
 	<section class="experience-section section exp">
 		<div class="container">
@@ -245,11 +245,11 @@
 							<img src="imgs/ps.png"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>INCOMING SOFTWARE ENGINEER INTERN</b></h4>
+							<h4><b>Incoming Software Engineering Intern</b></h4>
 							<h5 class="font-yellow">
 								<b>Pluralsight</b>
 							</h5>
-							<h6 class="margin-t-10">MAY 2020 - PRESENT</h6>
+							<h6 class="margin-t-9">May 2020 - Present</h6>
 							<ul class="list margin-b-30">
 								<li>Building platforms for developing tech skills</li><br>
 							</ul>
@@ -264,11 +264,11 @@
 							<img src="imgs/scs.gif"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>TEACHING ASSISTANT</b></h4>
+							<h4><b>Teaching Assistant</b></h4>
 							<h5 class="font-yellow">
 								<b>15-122 Principles of Imperative Computation - CMU School of Computer Science</b>
 							</h5>
-							<h6 class="margin-t-10">AUGUST 2019 - PRESENT</h6>
+							<h6 class="margin-t-9">August 2019 - Present</h6>
 							<ul class="list margin-b-30">
 								<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
 								<li>Lead weekly labs & recitations, participate in grading sessions, and hold office hours for over 500 students</li>
@@ -286,11 +286,11 @@
 							<img src="imgs/lti.png"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>DATA & MACHINE LEARNING RESEARCH ASSISTANT</b></h4>
+							<h4><b>Data & Machine Learning Research Assistant</b></h4>
 							<h5 class="font-yellow">
 								<b>MultiComp Lab - CMU School of Computer Science</b>
 							</h5>
-							<h6 class="margin-t-10">MAY 2019 - PRESENT</h6>
+							<h6 class="margin-t-9">May 2019 - Present</h6>
 							<ul class="list margin-b-30">
 								<li>Explore web data crawling mechanisms to compile and release multimodal datasets</li>
 								<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
@@ -309,9 +309,9 @@
 							<img src="imgs/adagio2.png" alt="Adagio"/>
 						</div> 
 						<div class="col-sm-10">
-							<h4><b>TECHNOLOGY INTERN</b></h4>
+							<h4><b>Technology Intern</b></h4>
 							<h5 class="font-yellow"><b>Adagio Digital Guitar School</b></h5>
-							<h6 class="margin-t-10">MAY 2019 - Oct 2019</h6>
+							<h6 class="margin-t-9">May 2019 - Oct 2019</h6>
 							<ul class="list margin-b-30">
 								<li>Lead initial design and development of Adagio’s website and
 									features to reach minimum viable product for customers and
