--- a/index.html
+++ b/index.html
@@ -223,7 +223,11 @@
 						</div>
 					</div>
 
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"></div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"></div>
+
 				</div>
+		
 
 			</section>
 
