--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="profile-img"><img src="imgs/profile.png" alt="Profile Pic"></div>
 						<div id="banner-text">
 							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
-							<p>Hi, I'm Austin, a junior at CMU studying Information Systems with minors in Computer Science and Software Engineering. <br><br>I'm currently building platforms for developing tech skills with Pluralsight!
+							<p>Hi, I'm Austin, a junior at &nbsp;<img class="img-responsive intro-icon" src="imgs/cmuicon.png" alt="CMU" /> &nbsp; studying Information Systems with minors in Computer Science and Software Engineering. <br><br>I'm currently building platforms for developing tech skills with &nbsp;<img class="img-responsive intro-icon" src="imgs/psicon.png" alt="Pluralsight" /> &nbsp;!
 							</p>
 						</div><br>
 						<ul class="social-icons">
@@ -249,19 +249,25 @@
 							<img src="imgs/ps.png"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>Incoming Software Engineering Intern</b></h4>
+							<h4><b>Software Engineering Intern</b></h4>
 							<h5 class="font-yellow">
 								<b>Pluralsight</b>
 							</h5>
 							<h6 class="margin-t-9">May 2020 - Present</h6>
 							<ul class="list margin-b-30">
-								<li>Building platforms for developing tech skills</li><br>
+								<li>Building platforms for developing tech skills :D</li>
 							</ul>
 							<div class="skills">
-								<!-- <span class="skill">C</span> -->
+								<span class="skill">HTML/CSS/JS</span>
+								<span class="skill">TypeScript</span>
+								<span class="skill">React</span>
+								<span class="skill">Node.js</span>
+								<span class="skill">PostgreSQL</span>
 							</div>
 						</div>
 					</div><!-- experience -->
+
+					<br>
 
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company">
@@ -300,8 +306,8 @@
 								<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
 							</ul>
 							<div class="skills">
-										<span class="skill">Python</span>
-										<span class="skill">PyTorch</span>
+								<span class="skill">Python</span>
+								<span class="skill">PyTorch</span>
 							</div>
 						</div>
 					</div><!-- experience -->
