--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="profile-img"><img src="imgs/profile.png" alt="Profile Pic"></div>
 						<div id="banner-text">
 							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
-							<p>Hi, I'm Austin, a junior at &nbsp;<img class="img-responsive intro-icon" src="imgs/cmuicon.png" alt="CMU" /> &nbsp; studying Information Systems with minors in Computer Science and Software Engineering. <br><br>I'm currently building platforms for developing tech skills with &nbsp;<img class="img-responsive intro-icon" src="imgs/psicon.png" alt="Pluralsight" /> &nbsp;!
+							<p>Hi, I'm Austin, a junior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. <br><br>This past summer I worked on developing a platform to democratize tech skills with Pluralsight!
 							</p>
 						</div><br>
 						<ul class="social-icons">
@@ -75,12 +75,12 @@
 							<h2>TextLive</h2>
 							<a class="info textlive" href="https://play.google.com/store/apps/details?id=com.textlive">
 								<div class="infoText">
-									An Android app that allows you to call people and have a continuous text conversation.
+									An Android app allowing users to call friends to start a conversation where text is typed continuously rather than in separate messages
 									<div class="skills">
 										<span class="skill">HTML/CSS/JS</span>
 										<span class="skill">React Native</span>
-										<span class="skill">Node.js</span>
-										<span class="skill">Express.js</span>
+										<span class="skill">Node</span>
+										<span class="skill">Express</span>
 										<span class="skill">MongoDB</span>
 									</div>
 								</div>
@@ -121,8 +121,8 @@
 									<div class="skills">
 										<span class="skill">HTML/CSS/JS</span>
 										<span class="skill">React</span>
-										<span class="skill">Node.js</span>
-										<span class="skill">Express.js</span>
+										<span class="skill">Node</span>
+										<span class="skill">Express</span>
 									</div>
 								</div>
 							</a>
@@ -253,16 +253,24 @@
 							<h5 class="font-yellow">
 								<b>Pluralsight</b>
 							</h5>
-							<h6 class="margin-t-9">May 2020 - Present</h6>
+							<h6 class="margin-t-9">May 2020 - Aug 2020</h6>
 							<ul class="list margin-b-30">
-								<li>Building platforms for developing tech skills :D</li>
+								<li>Pair and mob programmed on the full stack Channels/RoleIQ/Profile teams utilizing React and Redux for frontend with TypeScript, Node, C#, .Net, and PostgreSQL for backend</li>
+								<li>Designed and developed an Express middleware security package to prevent cross-site scripting attacks on all Pluralsight webpages, distributed to each of 60 engineering teams</li>
+								<li>Interviewed external stakeholders to discover use cases and refine product designs</li>
 							</ul>
 							<div class="skills">
 								<span class="skill">HTML/CSS/JS</span>
 								<span class="skill">TypeScript</span>
 								<span class="skill">React</span>
-								<span class="skill">Node.js</span>
+								<span class="skill">Redux</span>
+								<span class="skill">Node</span>
+								<span class="skill">Express</span>
+								<span class="skill">C#</span>
+								<span class="skill">.Net</span>
 								<span class="skill">PostgreSQL</span>
+								<span class="skill">Docker</span>
+								<span class="skill">TeamCity</span>
 							</div>
 						</div>
 					</div><!-- experience -->
@@ -274,14 +282,14 @@
 							<img src="imgs/scs.gif"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>Teaching Assistant</b></h4>
+							<h4><b>Teaching Assistant (Principles of Imperative Computation)</b></h4>
 							<h5 class="font-yellow">
-								<b>15-122 Principles of Imperative Computation - CMU School of Computer Science</b>
+								<b>CMU School of Computer Science | Pittsburgh, PA</b>
 							</h5>
 							<h6 class="margin-t-9">August 2019 - Present</h6>
 							<ul class="list margin-b-30">
-								<li>Teach imperative programming and methods for ensuring correctness of programs through specific applications to data structures and algorithms in C</li>
-								<li>Lead weekly labs & recitations, participate in grading sessions, and hold office hours for over 500 students</li>
+								<li>Teach data structures, algorithms, and C language concepts to 500 students each semester</li>
+								<li>Lead weekly labs & recitations, participate in grading sessions, and hold office hours</li>
 							</ul>
 							<div class="skills">
 								<span class="skill">C</span>
@@ -298,12 +306,12 @@
 						<div class="col-sm-10">
 							<h4><b>Data & Machine Learning Research Assistant</b></h4>
 							<h5 class="font-yellow">
-								<b>MultiComp Lab - CMU School of Computer Science</b>
+								<b>MultiComp Lab - Language Technologies Institute | Pittsburgh, PA</b>
 							</h5>
-							<h6 class="margin-t-9">May 2019 - Present</h6>
+							<h6 class="margin-t-9">May 2019 - May 2020</h6>
 							<ul class="list margin-b-30">
-								<li>Explore web data crawling mechanisms to compile and release multimodal datasets</li>
-								<li>Build deep learning multilayer perceptrons and convolutional neural networks with PyTorch to extract computational descriptors and detect multimodal patterns</li>
+								<li>Explored web data crawling mechanisms to compile 3 multimodal datasets</li>
+								<li>Built deep learning convolutional neural networks with PyTorch to detect multimodal patterns</li>
 							</ul>
 							<div class="skills">
 								<span class="skill">Python</span>
@@ -320,15 +328,11 @@
 						</div> 
 						<div class="col-sm-10">
 							<h4><b>Technology Intern</b></h4>
-							<h5 class="font-yellow"><b>Adagio Digital Guitar School</b></h5>
+							<h5 class="font-yellow"><b>Adagio Digital Guitar School | Remote</b></h5>
 							<h6 class="margin-t-9">May 2019 - Oct 2019</h6>
 							<ul class="list margin-b-30">
-								<li>Lead initial design and development of Adagio’s website and
-									features to reach minimum viable product for customers and
-									investors</li>
-								<li>Analyze competition and guitar market to help determine
-										essential qualities of Adagio’s digital guitar learning
-										experience and prioritize website features</li>
+								<li>Led initial design and development of Adagio’s website and features to reach minimum viable product for customers and investors</li>
+								<li>Analyzed competition and guitar market to help determine essential qualities of Adagio’s digital guitar learning experience and prioritize website features</li>
 							</ul>
 							<div class="skills">
 								<span class="skill">HTML/CSS/JS</span>
