--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<h2>TextLive</h2>
 							<a class="info textlive" href="https://play.google.com/store/apps/details?id=com.textlive">
 								<div class="infoText">
-									An Android app allowing users to call friends to start a conversation where text is typed continuously rather than in separate messages
+									An Android app where users have a conversation through live text instead of separately sent messages
 									<div class="skills">
 										<span class="skill">HTML/CSS/JS</span>
 										<span class="skill">React Native</span>
@@ -116,7 +116,7 @@
 							<h2>The Reddit Sentiment Analyzer</h2>
 							<a class="info reddit" href="https://github.com/DLo930/reddit-sentiment-analysis">
 								<div class="infoText">
-									A chrome extension and web app allowing you to view Reddit posts and comments colored by emotion.<br/><br/>
+									A web app visualizing sentiment of Reddit posts and comments through different colors and intensities.<br/><br/>
 									<i>1st Place - CodeDay Pittsburgh Spring 2019</i>
 									<div class="skills">
 										<span class="skill">HTML/CSS/JS</span>
@@ -144,8 +144,7 @@
 								<h2>AI Mahjong</h2>
 								<a class="info mahjong" href="https://github.com/austin-leung/112-Mahjong">
 									<div class="infoText">
-										A multiplayer game with a strong AI and assist mode to
-										train player strategy.
+										A multiplayer game with a strong AI and assist mode to train player strategy.
 										<div class="skills">
 											<span class="skill">Python</span>
 											<span class="skill">Tkinter</span>
@@ -163,8 +162,7 @@
 								<h2>Stork</h2>
 								<a class="info stork" href="https://github.com/DLo930/Stork">
 									<div class="infoText">
-										A platform that connects people in need of supplies during disasters 
-										with those who can help out. 
+										A platform that connects people in need of supplies during disasters with those who can help out. 
 										<div class="skills">
 											<span class="skill">HTML/CSS/JS</span>
 											<span class="skill">React</span>
@@ -186,8 +184,7 @@
 								<h2>Who's That Pokémon?</h2>
 								<a class="info pkmn" href="https://github.com/austin-leung/whos-that-pokemon/blob/master/pokemonCNN.ipynb">
 									<div class="infoText">
-										A multilayer perceptron and convolutional
-										neural network trained to identify over 900 Pokémon.
+										A multilayer perceptron and convolutional neural network trained to identify over 900 Pokémon.
 										<div class="skills">
 											<span class="skill">Python</span>
 											<span class="skill">PyTorch</span>
@@ -211,8 +208,7 @@
 								<h2>Find the Sets</h2>
 								<a class="info fts" href="https://github.com/austin-leung/GyulHap">
 									<div class="infoText">
-										A cognitive time-based game where players match sets of
-										images based on shape, color, and background.
+										A cognitive time-based game where players match sets of images based on shape, color, and background.
 										<div class="skills">
 											<span class="skill">Java</span>
 											<span class="skill">Processing</span>
@@ -256,7 +252,7 @@
 							<h6 class="margin-t-9">May 2020 - Aug 2020</h6>
 							<ul class="list margin-b-30">
 								<li>Pair and mob programmed on the full stack Channels/RoleIQ/Profile teams utilizing React and Redux for frontend with TypeScript, Node, C#, .Net, and PostgreSQL for backend</li>
-								<li>Designed and developed an Express middleware security package to prevent cross-site scripting attacks on all Pluralsight webpages, distributed to each of 60 engineering teams</li>
+								<li>Designed and developed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
 								<li>Interviewed external stakeholders to discover use cases and refine product designs</li>
 							</ul>
 							<div class="skills">
